change color website

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-background-color: #2987df;
+background-color: #200dc6;
 padding: 10px; 
 
 }
