--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 
 }
 nav {
-    background-color:#254aee;
+    background-color:#0f0ff9;
     display: flex;
     justify-content: space-between;
     align-items: center;
