--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ header {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     padding: 2rem;
-    background-image:url(cyberpunk-urban-scenery.jpg);
+    background-image:url(Assets/cyberpunk-urban-scenery.jpg);
     background-size: cover;
     color: #f4f4f4;
     letter-spacing: 5px;
