--- a/styles.css
+++ b/styles.css
@@ -45,16 +45,13 @@ nav li {
     
 }
 footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
+    flex-shrink: 0;
     background-color: #3a37f7;
-    padding: 1rem;
+    color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    color: white;
 }
+
 footer p a {
     text-decoration: none;
     color: white;
