--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 *, html {
     padding: 0;
     margin: 0;
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 header {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
-    padding: 2rem;
-    background-image:url(assets/cyberpunk-urban-scenery.jpg);
+    padding: 3rem;
+    background-image: url(assets/cyberpunk-urban-scenery.jpg);
     background-size: cover;
     color: #f4f4f4;
     letter-spacing: 5px;
@@ -18,7 +18,6 @@ header p {
 body {
     background-color: #f4f4f4;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
 }
 nav {
     display: flex;
@@ -26,21 +25,24 @@ nav {
     align-items: center;
     background-color: #9a35ff;
     padding: 10px; 
-
+    position: fixed;
+    top: 0;
+    width: 100%; /* Pastikan nav mengisi lebar halaman */
+    z-index: 1000; /* Agar nav berada di atas konten lainnya */
 }
 nav ul {
     display: flex;
     list-style: none;
     align-items: center;
     gap: 2rem;
- }
+}
 nav li {
     margin-left: 20px;  
 }
 
 #background {
     width: 1000px;
-    height:auto;
+    height: auto;
     align-items: baseline;
     
 }
@@ -50,9 +52,9 @@ footer {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    position: fixed; /* Menambahkan properti ini */
-    bottom: 0; /* Menentukan posisi tetap di atas */
-    width: 100%; /* Mengatur lebar header agar penuh */
+    position: fixed; 
+    bottom: 0; 
+    width: 100%; 
     padding: 10px; 
     justify-content: center;
 }
